[package]
name = "RustyBits_ZeroToAsync"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
cortex-m-semihosting = "0.5.0"
critical-section = "1.2.0"
fugit = "0.3.7"
heapless = { version = "0.8.0", features = ["portable-atomic"] }
nb = "1.1.0"
panic-halt = "1.0.0"
portable-atomic = { version = "1.11.0", features = ["critical-section"] }
stm32f0xx-hal = { version = "0.18", features = ["stm32f072"] }

[[bin]]
name = "RustyBits_ZeroToAsync"
test = false
bench = false
